the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2019-] added data structure TMCG_Bigint
* [2019-04-21] RFC4880: added PacketScalarFourEncode()
* [2019-04-21] RFC4880: added PacketSubEncodeV5(), PacketPubEncodeV5()
* [2019-04-21] RFC4880: changed TMCG_OpenPGP_PrivateSubkey, TMCG_OpenPGP_Prvkey
* [2019-04-21] RFC4880: changed TMCG_OpenPGP_Subkey, TMCG_OpenPGP_Pubkey
* [2019-04-21] RFC4880: added KeyidComputerV5(), FingerprintComputePrettyV5()
* [2019-04-19] RFC4880: added FingerprintComputeV5() and version 5 key format
* [2019-01-27] RFC4880: added missed GCRY error source by using gcry_error()
* [2019-01-22] release 1.3.17 of LibTMCG
* [2019-01-19] VTMF,ASTC,DKG,VRHE,EOTP,COM,VSS: make CheckGroup() more robust
* [2019-01-19] VSSHE: security bugfix for Verify_[non]interactive_[_publiccoin]
* [2019-01-16] mpz_spowm: added check for correct base in fast exponentiation
* [2019-01-16] mpz_sqrtm: remove unused parameter in tmcg_mpz_qrmn_p()
* [2019-01-16] configure.ac: added compiler option "-Wextra"
* [2019-01-05] mpz_sprime: added tmcg_mpz_smprime() with increased B = 80000
* [2018-12-23] RFC4880: changed type of tmcg_openpgp_mem_alloc to unsigned long
* [2018-12-02] release 1.3.16 of LibTMCG
* [2018-12-02] changed constant TMCG_MAX_CARDS (decreased by factor 2)
* [2018-12-02] changed formulas for TMCG_MAX_VALUE_CHARS and TMCG_MAX_KEY_CHARS
* [2018-11-25] RFC4880: added support of Preferred AEAD Algorithms [RFC 4880bis]
* [2018-11-23] RFC4880: added output for key usage "timestamping" [RFC 4880bis]
* [2018-11-21] RFC4880: changed tmcg_openpgp_byte_t: unsigned char -> uint8_t
* [2018-11-18] RFC4880: added PacketAeadEncode() [RFC 4880bis]